[gd_scene load_steps=3 format=3 uid="uid://wmrl8n368gpj"]

[ext_resource type="Script" uid="uid://dfshwbiyqun4x" path="res://scenes/ui/report_board/report_board.gd" id="1_dclfs"]
[ext_resource type="Theme" uid="uid://ljcck66th0xd" path="res://scenes/ui/game_ui_theme.tres" id="1_pe5h1"]

[node name="ReportBoard" type="PanelContainer"]
custom_minimum_size = Vector2(500, 350)
offset_right = 300.0
offset_bottom = 150.0
theme = ExtResource("1_pe5h1")
theme_type_variation = &"DarkWoodPanel"
script = ExtResource("1_dclfs")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("1_pe5h1")
theme_type_variation = &"HeaderLarge"
text = "Daily Report"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="DayLabel" type="Label" parent="MarginContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme = ExtResource("1_pe5h1")
theme_type_variation = &"InventoryLabel"
theme_override_font_sizes/font_size = 16
text = "Day 1,"

[node name="YearLabel" type="Label" parent="MarginContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme = ExtResource("1_pe5h1")
theme_type_variation = &"InventoryLabel"
theme_override_font_sizes/font_size = 16
text = "Year 1900"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="TaskCompletedLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("1_pe5h1")
theme_type_variation = &"InventoryLabel"
theme_override_font_sizes/font_size = 16
text = "Tasks Completed: 1"

[node name="TaskFailedLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("1_pe5h1")
theme_type_variation = &"InventoryLabel"
theme_override_font_sizes/font_size = 16
text = "Tasks Failed: 1"
